<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">AI羽毛球教练</string>
    <string name="java_entry_title" translatable="false">点击开始</string>
    <string name="kotlin_entry_title" translatable="false">项目描述</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">需要访问摄像头进行检测</string>
    <string name="no_camera_permission" translatable="false">此应用程序无法运行，因为它没有相机权限。应用程序现在将退出。</string>
    <string name="low_storage_error" translatable="false">由于设备存储空间不足，无法下载检测器依赖项</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">视觉探测器演示和现场摄像机预览</string>
    <string name="desc_still_image_activity" translatable="false">带有静止图像的视觉检测器演示</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">视觉检测器演示，使用CameraX进行实时预览。CameraX仅在API 21上受支持+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">CameraX仅在API 21上受支持+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">自定义对象检测器</string>

    <!-- Settings related strings. -->
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>

    <!-- Strings for info preference. -->
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>

    <!--    NULL    -->
    <string name="pref_toast_invalid_min_face_size">NULL</string>
    <string name="pref_key_live_preview_face_detection_min_face_size">NULL</string>
    <!-- Strings for pose detector performance mode preference. -->
    <string name="pref_title_pose_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode" translatable="false">lppdpm</string>
    <string name="pref_key_still_image_pose_detection_performance_mode" translatable="false">sipdpm</string>
    <string name="pref_entries_pose_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="pref_entries_pose_detector_performance_mode_accurate" translatable="false">Accurate</string>
    <string name="pref_entry_values_pose_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_pose_detector_performance_mode_accurate" translatable="false">2</string>

    <!-- Strings for pose detector prefer gpu preference. -->
    <string name="pref_title_pose_detector_prefer_gpu" translatable="false">Prefer using GPU</string>
    <string name="pref_key_pose_detector_prefer_gpu" translatable="false">pdpg</string>
    <string name="pref_summary_pose_detector_prefer_gpu" translatable="false">If enabled, GPU will be used as long as it is available, stable and returns correct results. In this case, the detector will not check if GPU is really faster than CPU.</string>

    <!-- Strings for pose detector showInFrameLikelihood preference. -->
    <string name="pref_title_pose_detector_show_in_frame_likelihood" translatable="false">Show in-frame likelihood</string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood" translatable="false">lppdsifl</string>
    <string name="pref_key_still_image_pose_detector_show_in_frame_likelihood" translatable="false">sipdsifl</string>

    <!-- Strings for pose detector z value visualization preference. -->
    <string name="pref_title_pose_detector_visualize_z" translatable="false">Visualize z value</string>
    <string name="pref_key_pose_detector_visualize_z" translatable="false">pdvz</string>
    <string name="pref_title_pose_detector_rescale_z" translatable="false">Rescale z value for visualization</string>
    <string name="pref_key_pose_detector_rescale_z" translatable="false">pdrz</string>

    <!-- Strings for pose classification preference. -->
    <string name="pref_title_pose_detector_run_classification" translatable="false">Run Classification</string>
    <string name="pref_key_pose_detector_run_classification" translatable="false">pdrc</string>
    <string name="pref_summary_pose_detector_run_classification" translatable="false">Classify squat and pushup poses. Count reps in streaming mode. To get the best classification results based on the current sample data, face the camera side way and make sure your full body is in the frame.</string>

    <!-- Strings for segmentation preference. -->
    <string name="pref_title_segmentation_raw_size_mask" translatable="false">启用原始大小掩码</string>
    <string name="pref_key_segmentation_raw_size_mask" translatable="false">srsm</string>

    <string name="pref_group_title_face_mesh" translatable="false">人脸网格检测</string>
    <string name="pref_title_face_mesh_use_case" translatable="false">使用案例</string>
    <string name="pref_key_face_mesh_use_case" translatable="false">面部</string>

</resources>
