<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/pref_category_info">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_info_hide"
        android:persistent="true"
        android:title="@string/pref_title_info_hide"/>
  </PreferenceCategory>


  <PreferenceCategory android:title="@string/pref_category_pose_detection">
    <ListPreference
        android:defaultValue="@string/pref_entry_values_pose_detector_performance_mode_fast"
        android:entries="@array/pref_entries_values_pose_detector_performance_mode"
        android:entryValues="@array/pref_entry_values_pose_detector_performance_mode"
        android:key="@string/pref_key_still_image_pose_detection_performance_mode"
        android:persistent="true"
        android:title="@string/pref_title_pose_detector_performance_mode"
        android:summary="%s"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_pose_detector_prefer_gpu"
        android:persistent="true"
        android:title="@string/pref_title_pose_detector_prefer_gpu"
        android:summary="@string/pref_summary_pose_detector_prefer_gpu"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_still_image_pose_detector_show_in_frame_likelihood"
        android:persistent="true"
        android:title="@string/pref_title_pose_detector_show_in_frame_likelihood"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_pose_detector_visualize_z"
        android:persistent="true"
        android:title="@string/pref_title_pose_detector_visualize_z"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_pose_detector_rescale_z"
        android:persistent="true"
        android:title="@string/pref_title_pose_detector_rescale_z"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_pose_detector_run_classification"
        android:persistent="true"
        android:title="@string/pref_title_pose_detector_run_classification"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_category_segmentation">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_segmentation_raw_size_mask"
        android:persistent="true"
        android:title="@string/pref_title_segmentation_raw_size_mask"/>
  </PreferenceCategory>


  <PreferenceCategory android:title="@string/pref_group_title_face_mesh">
    <ListPreference
        android:key="@string/pref_key_face_mesh_use_case"
        android:persistent="true"
        android:title="@string/pref_title_face_mesh_use_case"
        android:defaultValue="1"
        android:entries="@array/pref_entry_titles_face_mesh_use_case"
        android:entryValues="@array/pref_entry_values_face_mesh_use_case"
        android:summary="%s"/>
  </PreferenceCategory>

</PreferenceScreen>
